            added intervention sound volume xml parameter 
    modules/
        racing/standardgame
            raceinit.cpp
                changed reLoadSingleCar() to fix isHuman flag
                changed ReInitCars() to fix isHuman flag
                changed ReCleanup() to also shut down updaters
            racesituation.cpp
                change deltaTime to be constant value

        sound/snddefault/
            CMakeLists.txt
                added frontend
                added backend
            grsound.cpp
                added intervention sound initialization
                added intervention sound volume setting
            OpenalSound.cpp
                changed start(): track when the sound was started
                changed resume(): added check if sound is actually paused
                changed pause(): added check if sound is playing
                changed update(): added check for playing state
            OpenalSoundInterface.h
                added UpdateInterventionSounds()
            OpenalSoundInterface.cpp
                added UpdateInterventionSounds()
                changed update(): added update and starting of intervention sounds
            Sound.h
                added LastStart
                added GetLastStart()
            Sound.cpp
                added GetLastStart()
            SoundInterface.cpp
                included "IndicatorConfig.h"
                added LoadIndicatorSounds()
                added SetInterventionVolume()
                added GetInterventionVolume()
                added Clamp() helper function
                changed SoundInterface(): added InterventionVolume member init
            SoundInterface.h
                added LoadIndicatorSounds()
                added m_indicatorSounds vector
                added SetInterventionVolume()
                added GetInterventionVolume()
                added InterventionVolume member
                added Clamp() helper function