@@ -146,6 +146,34 @@ TEST(ConfigTests, BlackBoxFilePathTest)
     }
 }
 
+/// @brief Tests if the SDAConfig sets and gets the EnvironmentFilePath correctly
+TEST(ConfigTests, EnvironmentFilePathTest)
+{
+    SDAConfig config;
+    Random random;
+    for (int j = 0; j <= 10; j++)
+    {
+        char path[256];
+        int length = 2 + 254 * j / 10;
+        for (int i = 0; i < length - 1; i++)
+        {
+            char c;
+            do
+            {  // Make sure no character is assigned the null character
+                c = (char)random.NextByte();
+            } while (c == '\0');
+            path[i] = c;
+        }
+        path[length - 1] = '\0';
+        config.SetEnvironmentFilePath(path);
+        const char* configPath = config.GetEnvironmentFilePath();
+        for (int i = 0; i < length; i++)
+        {
+            ASSERT_EQ(path[i], configPath[i]);
+        }
+    }
+}
+
 void BlackBoxSyncOptionTestConfig(bool p_sync)
 {
     SDAConfig config;
